Add disinformation process

--- a/notebook/Scored_Data.ipynb
+++ b/notebook/Scored_Data.ipynb
@@ -37,11 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/Users/Gianluca/Desktop/provascript\\\\score_results_prova.json']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "path = glob.glob('C:/Users/Gianluca/Desktop/provascript/*.json')"
+    "path = glob.glob('C:/Users/Gianluca/Desktop/provascript/*.json')\n",
+    "path"
    ]
   },
   {
