Setup index and start new investigation

--- a/notebook/Users_US.ipynb
+++ b/notebook/Users_US.ipynb
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -733,70 +733,70 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10 entries, 0 to 9\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
       "Data columns (total 46 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   id                         10 non-null     int64  \n",
-      " 1   id_str                     10 non-null     int64  \n",
-      " 2   created_at                 10 non-null     object \n",
-      " 3   user_id                    10 non-null     int64  \n",
-      " 4   user_screen_name           10 non-null     object \n",
-      " 5   user_verified              10 non-null     bool   \n",
-      " 6   user_created_at            10 non-null     object \n",
-      " 7   text                       10 non-null     object \n",
-      " 8   source                     10 non-null     object \n",
+      " 0   id                         1000 non-null   int64  \n",
+      " 1   id_str                     1000 non-null   int64  \n",
+      " 2   created_at                 1000 non-null   object \n",
+      " 3   user_id                    1000 non-null   int64  \n",
+      " 4   user_screen_name           1000 non-null   object \n",
+      " 5   user_verified              1000 non-null   bool   \n",
+      " 6   user_created_at            1000 non-null   object \n",
+      " 7   text                       1000 non-null   object \n",
+      " 8   source                     1000 non-null   object \n",
       " 9   coordinates                0 non-null      float64\n",
-      " 10  is_quote_status            10 non-null     bool   \n",
-      " 11  retweet_count              10 non-null     int64  \n",
-      " 12  favorite_count             10 non-null     int64  \n",
-      " 13  favorited                  10 non-null     bool   \n",
-      " 14  retweeted                  10 non-null     bool   \n",
-      " 15  lang                       10 non-null     object \n",
-      " 16  in_reply_to_status_id      0 non-null      float64\n",
-      " 17  in_reply_to_status_id_str  0 non-null      float64\n",
-      " 18  in_reply_to_user_id        0 non-null      float64\n",
-      " 19  in_reply_to_user_id_str    0 non-null      float64\n",
-      " 20  in_reply_to_screen_name    0 non-null      float64\n",
+      " 10  is_quote_status            1000 non-null   bool   \n",
+      " 11  retweet_count              1000 non-null   int64  \n",
+      " 12  favorite_count             1000 non-null   int64  \n",
+      " 13  favorited                  1000 non-null   bool   \n",
+      " 14  retweeted                  1000 non-null   bool   \n",
+      " 15  lang                       1000 non-null   object \n",
+      " 16  in_reply_to_status_id      61 non-null     float64\n",
+      " 17  in_reply_to_status_id_str  61 non-null     float64\n",
+      " 18  in_reply_to_user_id        67 non-null     float64\n",
+      " 19  in_reply_to_user_id_str    67 non-null     float64\n",
+      " 20  in_reply_to_screen_name    67 non-null     object \n",
       " 21  rt_coordinates             0 non-null      float64\n",
-      " 22  rt_created_at              9 non-null      object \n",
-      " 23  rt_in_reply_to_status_id   1 non-null      float64\n",
-      " 24  rt_in_reply_to_user_id     2 non-null      float64\n",
-      " 25  rt_lang                    9 non-null      object \n",
-      " 26  rt_favourite_count         9 non-null      float64\n",
-      " 27  rt_id                      9 non-null      float64\n",
-      " 28  rt_user_id                 9 non-null      float64\n",
-      " 29  rt_user_screen_name        9 non-null      object \n",
-      " 30  rt_user_created_at         9 non-null      object \n",
-      " 31  rt_user_verified           9 non-null      object \n",
-      " 32  rt_user_followers_count    9 non-null      float64\n",
-      " 33  rt_user_friends_count      9 non-null      float64\n",
-      " 34  rt_user_favourites_count   9 non-null      float64\n",
-      " 35  quoted_status_id           1 non-null      float64\n",
-      " 36  quoted_status_text         0 non-null      float64\n",
-      " 37  quoted_status_created_at   0 non-null      float64\n",
-      " 38  quoted_user_id             0 non-null      float64\n",
-      " 39  quoted_user_created_at     0 non-null      float64\n",
-      " 40  hashtags                   10 non-null     object \n",
-      " 41  symbols                    10 non-null     object \n",
-      " 42  user_mentions              10 non-null     object \n",
-      " 43  urls                       10 non-null     object \n",
-      " 44  polls                      10 non-null     object \n",
-      " 45  media                      10 non-null     object \n",
-      "dtypes: bool(4), float64(20), int64(5), object(17)\n",
-      "memory usage: 3.4+ KB\n"
+      " 22  rt_created_at              729 non-null    object \n",
+      " 23  rt_in_reply_to_status_id   50 non-null     float64\n",
+      " 24  rt_in_reply_to_user_id     66 non-null     float64\n",
+      " 25  rt_lang                    729 non-null    object \n",
+      " 26  rt_favourite_count         729 non-null    float64\n",
+      " 27  rt_id                      729 non-null    float64\n",
+      " 28  rt_user_id                 729 non-null    float64\n",
+      " 29  rt_user_screen_name        729 non-null    object \n",
+      " 30  rt_user_created_at         729 non-null    object \n",
+      " 31  rt_user_verified           729 non-null    object \n",
+      " 32  rt_user_followers_count    729 non-null    float64\n",
+      " 33  rt_user_friends_count      729 non-null    float64\n",
+      " 34  rt_user_favourites_count   729 non-null    float64\n",
+      " 35  quoted_status_id           64 non-null     float64\n",
+      " 36  quoted_status_text         16 non-null     object \n",
+      " 37  quoted_status_created_at   16 non-null     object \n",
+      " 38  quoted_user_id             16 non-null     float64\n",
+      " 39  quoted_user_created_at     16 non-null     object \n",
+      " 40  hashtags                   1000 non-null   object \n",
+      " 41  symbols                    1000 non-null   object \n",
+      " 42  user_mentions              1000 non-null   object \n",
+      " 43  urls                       1000 non-null   object \n",
+      " 44  polls                      1000 non-null   object \n",
+      " 45  media                      1000 non-null   object \n",
+      "dtypes: bool(4), float64(16), int64(5), object(21)\n",
+      "memory usage: 332.2+ KB\n"
      ]
     }
    ],
    "source": [
-    "for chunk in pd.read_csv(files_tweets[0], chunksize=10, lineterminator = '\\n'):\n",
+    "for chunk in pd.read_csv(files_tweets[0], chunksize=1000, lineterminator = '\\n'):\n",
     "    break\n",
     "chunk.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -812,7 +812,7 @@
       "Processing chunk 4\n",
       "Processing chunk 5\n",
       "Mese numero 1\n",
-      "Time:  96.18843799999999\n"
+      "Time:  93.80396939999991\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
     "link = []\n",
     "data = []\n",
     "result = []\n",
-    "cols_tweets = [u'user_screen_name',u'text']\n",
+    "cols_tweets = [u'user_screen_name',u'id', u'created_at', u'urls']\n",
     "files_tweets = glob.glob(\"F:/COVID-19-Tweets/*/tweets.csv\")\n",
     "importlib.reload(tweets_utils)\n",
     "start_time = time.perf_counter()\n",
@@ -838,90 +838,31 @@
     "    for i in range(len(lista)):\n",
     "#         print(i)\n",
     "#         print(\"-\")\n",
-    "#         if(i == 0):\n",
-    "#             x = 0\n",
-    "#         else:\n",
-    "#             x = y\n",
-    "#         y = x + len(lista[i][\"user\"])\n",
-    "#         for q in range(x,y):\n",
-    "#             if(found(lista[i][\"user\"][q])):\n",
-    "#                 users.append(lista[i][\"user\"][q])\n",
-    "#                 content.append(lista[i][\"content\"][q])            \n",
-    "        profile_name.extend(lista[i][\"users\"])\n",
-    "        profile_id.extend(lista[i][\"ids\"])\n",
-    "        link.extend(lista[i][\"link\"])\n",
-    "        data.extend(lista[i][\"data\"])\n",
-    "        \n",
+    "        if(i == 0):\n",
+    "            x = 0\n",
+    "        else:\n",
+    "            x = y\n",
+    "        y = x + len(lista[i][\"users\"])\n",
+    "        for q in range(x,y):\n",
+    "            if(found(lista[i][\"users\"][q])):          \n",
+    "                profile_name.append(lista[i][\"users\"][q])\n",
+    "                profile_id.append(lista[i][\"ids\"][q])\n",
+    "                link.append(lista[i][\"link\"][q])\n",
+    "                data.append(lista[i][\"data\"][q])\n",
+    "    break\n",
     "stop_time = time.perf_counter()\n",
     "print(\"Time: \",stop_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['unhealthytruth',\n",
-       " 'unhealthytruth',\n",
-       " 'BusyDrT',\n",
-       " 'unhealthytruth',\n",
-       " 'unhealthytruth',\n",
-       " 'BusyDrT',\n",
-       " 'RobertKennedyJr',\n",
-       " 'BusyDrT',\n",
-       " 'BusyDrT',\n",
-       " 'mercola',\n",
-       " 'BusyDrT',\n",
-       " 'BusyDrT',\n",
-       " 'unhealthytruth']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "users"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['I disagree w mark. i agree with Del Bigtree where he wants his kids to get the measles or they have lifetime immunity. Then they would pass it onto their child temporarily with breast milk and they wouldn’t get it when they are old. Also CDC said MMR is dangerous. Whistleblower. https://t.co/RkEAg6gEcs',\n",
-       " \"Is there a dating app where I can meet other vaccines and see if there's any chemistry?\\n#coronavirus #CoronavirusChino #CDC #excelsior\",\n",
-       " 'Why does the #GatesFoundation continue to get a free pass from all of us?  I understand how they control the CDC &amp; MSM  through funding ...... \\nWhats it going to take for the 100th monkey scenario to materialize?  I feel like we are so close!🐵 #Momentum starts now...',\n",
-       " '@UrbaneDoc4Kids @Dr_ScottK @living_gurl @sl0thluvchunk @chadhayesmd manufacturers are off the hook. If you would like to talk to him, we can arrange that as well. We also have other experts just on this area not to mention Dr. William Thompson at the CDC who talked about the cover-up https://t.co/eBeFNF9k6y',\n",
-       " 'how are you feeling about the coronavirus right now? How are you feeling that they’re going to rule out a vaccine faster than a new hip-hop single? PS I love hip-hop. I’m just saying. They roll them out real quick. #HealthNutNews https://t.co/pu43qocrUA',\n",
-       " 'Chemical warfare trucks spotted rushing towards coronavirus-infected Wuhan   What do you think they might actually be spraying ? #chemicalwarfare #vaccines #coronavirus  #wuhan  #crimesagainsthumanity  https://t.co/Cg0gJKSZAM',\n",
-       " 'Former billionaire + pharma exec John Kapoor sentenced to 5+ years. His sentencing is the culmination of a months-long criminal trial that resulted in pharma execs tied to the #opioid epidemic. #OpioidCrisis\\n\\nhttps://t.co/IStojRBKoL',\n",
-       " 'Even Robin Cook couldn’t have written a novel this suspenseful &amp; diabolical. #CoronaOutbreak #coronarvirus #BirdFlu #AvianFlu #vaccinepatents #CDC #WHO https://t.co/pesRYyB3Rh',\n",
-       " 'Corona Virus Fakery And The Link To 5G Testing https://t.co/I9QYQwMBzC  #5G #EMF #Radiation #heavymetals #mitochondria  #NaturalSolutions #CoronaVirus #BirdFlu #FluPandemic #PanicInChina #FearFactor',\n",
-       " 'Coronavirus — The Latest Pandemic Scare\\nhttps://t.co/f3jjC5E5tE',\n",
-       " 'The RSB Show 1/26/20 - @JonRappoport #Coronavirus update, China hoax, History matters https://t.co/M5EntutiTR @BusyDrT @ItsSuperDon @CancerTruthNews @JeffereyJaxen @sayerjigmi @GreenMedInfo @delbigtree @HighWireTalk @va_shiva',\n",
-       " '#Japan confirms patient with #coronavirus did NOT visit #China   https://t.co/A9Arrk6NdY',\n",
-       " \"@DrDanielGih So not only did he make himself and his family sick with the flu by pushing them to get a vaccine that is only 9% effective against the flu - he's ALSO ensured that they are ALL now MORE susceptible to the CORONAVIRUS!\\nhttps://t.co/QS7TnZCZ3k\"]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "content"
+    "urls = [tweets_utils.url_decompress(v) if v != \"[]\" else \"0\" for v in link]"
    ]
   },
   {
