Edit users link and data

--- a/notebook/Users_US.ipynb
+++ b/notebook/Users_US.ipynb
@@ -856,13 +856,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "urls = [tweets_utils.url_decompress(v) if v != \"[]\" else \"0\" for v in link]"
+    "importlib.reload(tweets_utils)\n",
+    "urls = [tweets_utils.url_decompress(v) if v != \"[]\" else \"0\" for v in link]\n",
+    "date = [tweets_utils.process_datetime(v) for v in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2020-01-22',\n",
+       " '2020-01-23',\n",
+       " '2020-01-24',\n",
+       " '2020-01-24',\n",
+       " '2020-01-24',\n",
+       " '2020-01-24',\n",
+       " '2020-01-24',\n",
+       " '2020-01-26',\n",
+       " '2020-01-29',\n",
+       " '2020-01-29',\n",
+       " '2020-01-26',\n",
+       " '2020-01-28',\n",
+       " '2020-01-28']"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['twitter.com',\n",
+       " '0',\n",
+       " '0',\n",
+       " 'childrenshealthdefense.org',\n",
+       " '0',\n",
+       " 'www.dailystar.co.uk',\n",
+       " 'www.npr.org',\n",
+       " 'twitter.com',\n",
+       " 'www.vigiliae.org',\n",
+       " 'ow.ly',\n",
+       " 'www.youtube.com',\n",
+       " 'www.dailymail.co.uk',\n",
+       " '0']"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urls"
    ]
   },
   {
