Edit doc and start Botometer manually

--- a/notebook/Disinform_CCDH.ipynb
+++ b/notebook/Disinform_CCDH.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -703,7 +703,46 @@
       "Mese numero 3\n",
       "Reading file: F:/COVID-19-Tweets\\2020-04\\tweets.csv\n",
       "Processing chunk 1\n",
-      "Processing chunk 2\n"
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Mese numero 4\n",
+      "Reading file: F:/COVID-19-Tweets\\2020-05\\tweets.csv\n",
+      "Processing chunk 1\n",
+      "Processing chunk 2\n",
+      "Processing chunk 3\n",
+      "Processing chunk 4\n",
+      "Processing chunk 5\n",
+      "Processing chunk 6\n",
+      "Processing chunk 7\n",
+      "Processing chunk 8\n",
+      "Processing chunk 9\n",
+      "Processing chunk 10\n",
+      "Processing chunk 11\n",
+      "Processing chunk 12\n",
+      "Processing chunk 13\n",
+      "Processing chunk 14\n",
+      "Processing chunk 15\n",
+      "Processing chunk 16\n",
+      "Processing chunk 17\n",
+      "Processing chunk 18\n",
+      "Processing chunk 19\n",
+      "Processing chunk 20\n",
+      "Processing chunk 21\n",
+      "Processing chunk 22\n",
+      "Processing chunk 23\n",
+      "Processing chunk 24\n",
+      "Mese numero 5\n",
+      "Time:  1966.9513404999998\n"
      ]
     }
    ],
@@ -780,20 +819,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of total tweets: 4082898\n",
-      "Number of original tweets: 704706\n",
-      "Number of retweet: 3175177\n",
-      "Number of reply: 203015\n",
-      "Number of original_tweets: 17.26% of total tweets\n",
-      "Number of retweets: 77.77% of total tweets\n",
-      "Number of replies: 4.97% of total tweets\n",
+      "Number of total tweets: 66412411\n",
+      "Number of original tweets: 13999715\n",
+      "Number of retweet: 48312504\n",
+      "Number of reply: 4100192\n",
+      "Number of original_tweets: 21.08% of total tweets\n",
+      "Number of retweets: 72.75% of total tweets\n",
+      "Number of replies: 6.17% of total tweets\n",
       "Check sum == len(tweets):  True\n"
      ]
     }
@@ -832,20 +871,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of total tweets: 259\n",
-      "Number of original tweets: 9\n",
-      "Number of retweet: 240\n",
-      "Number of reply: 10\n",
-      "Number of original_tweets: 3.47% of total tweets\n",
-      "Number of retweets: 92.66% of total tweets\n",
-      "Number of replies: 3.86% of total tweets\n",
+      "Number of total tweets: 3766\n",
+      "Number of original tweets: 75\n",
+      "Number of retweet: 3513\n",
+      "Number of reply: 178\n",
+      "Number of original_tweets: 1.99% of total tweets\n",
+      "Number of retweets: 93.28% of total tweets\n",
+      "Number of replies: 4.73% of total tweets\n",
       "Check sum == len(tweets):  True\n"
      ]
     }
@@ -884,6 +923,91 @@
    "source": [
     "urls = [tweets_utils.url_decompress(v) if v != \"[]\" else \"0\" for v in link]\n",
     "date = [tweets_utils.process_datetime(v) for v in data]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Misc investigation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retweeted_name = pd.Series(retweeted_name).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BusyDrT            41\n",
+       "unhealthytruth     12\n",
+       "mercola             7\n",
+       "RobertKennedyJr     6\n",
+       "kevdjenkins1        3\n",
+       "DrChrisNorthrup     3\n",
+       "DrButtar            2\n",
+       "DrBenTapper1        1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tweet_name\n",
+    "# tweet_id\n",
+    "# retweet_name\n",
+    "# retweet_id\n",
+    "# retweeted_name\n",
+    "# retweeted_id\n",
+    "# reply_id\n",
+    "# reply_name\n",
+    "# replied_id\n",
+    "# replied_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Botometer Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import botometer\n",
+    "from data_config import rapidapi_key_conf, consumer_key_conf, consumer_secret_conf, access_token_conf, access_token_secret_conf\n",
+    "\n",
+    "rapidapi_key = rapidapi_key_conf\n",
+    "twitter_app_auth = {\n",
+    "    'consumer_key': consumer_key_conf,\n",
+    "    'consumer_secret': consumer_secret_conf,\n",
+    "    'access_token': access_token_conf,\n",
+    "    'access_token_secret': access_token_secret_conf,\n",
+    "  }\n",
+    "bom = botometer.Botometer(wait_on_ratelimit=True,\n",
+    "                          rapidapi_key=rapidapi_key,\n",
+    "                          **twitter_app_auth)\n",
+    "\n",
+    "# Check a single account by screen name\n",
+    "result = bom.check_account('@elonmusk')\n",
+    "result"
    ]
   }
  ],
