Create file for network rt

--- a/notebook/Disinform_CCDH.ipynb
+++ b/notebook/Disinform_CCDH.ipynb
@@ -1107,138 +1107,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading file: F:/COVID-19-Tweets\\2020-01\\tweets.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Mese numero 1\n",
-      "Reading file: F:/COVID-19-Tweets\\2020-02\\tweets.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Processing chunk 7\n",
-      "Processing chunk 8\n",
-      "Processing chunk 9\n",
-      "Processing chunk 10\n",
-      "Processing chunk 11\n",
-      "Processing chunk 12\n",
-      "Mese numero 2\n",
-      "Reading file: F:/COVID-19-Tweets\\2020-03\\tweets.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Processing chunk 7\n",
-      "Processing chunk 8\n",
-      "Processing chunk 9\n",
-      "Processing chunk 10\n",
-      "Processing chunk 11\n",
-      "Processing chunk 12\n",
-      "Processing chunk 13\n",
-      "Processing chunk 14\n",
-      "Processing chunk 15\n",
-      "Mese numero 3\n",
-      "Reading file: F:/COVID-19-Tweets\\2020-04\\tweets.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Processing chunk 7\n",
-      "Processing chunk 8\n",
-      "Processing chunk 9\n",
-      "Processing chunk 10\n",
-      "Processing chunk 11\n",
-      "Processing chunk 12\n",
-      "Processing chunk 13\n",
-      "Mese numero 4\n",
-      "Reading file: F:/COVID-19-Tweets\\2020-05\\tweets.csv\n",
-      "Processing chunk 1\n",
-      "Processing chunk 2\n",
-      "Processing chunk 3\n",
-      "Processing chunk 4\n",
-      "Processing chunk 5\n",
-      "Processing chunk 6\n",
-      "Processing chunk 7\n",
-      "Processing chunk 8\n",
-      "Processing chunk 9\n",
-      "Processing chunk 10\n",
-      "Processing chunk 11\n",
-      "Processing chunk 12\n",
-      "Processing chunk 13\n",
-      "Processing chunk 14\n",
-      "Processing chunk 15\n",
-      "Processing chunk 16\n",
-      "Processing chunk 17\n",
-      "Processing chunk 18\n",
-      "Processing chunk 19\n",
-      "Processing chunk 20\n",
-      "Processing chunk 21\n",
-      "Processing chunk 22\n",
-      "Processing chunk 23\n",
-      "Processing chunk 24\n",
-      "Mese numero 5\n",
-      "Time:  1239.8987854\n"
-     ]
-    }
-   ],
-   "source": [
-    "rt_user_name = []\n",
-    "user_name = []\n",
-    "importlib.reload(tweets_utils)\n",
-    "start_time = time.perf_counter()\n",
-    "j = 0\n",
-    "for filename in files_tweets:\n",
-    "    print(f\"Reading file: {filename}\")\n",
-    "    result.extend(tweets_utils.process_all_data(filename, cols_tweets, True))\n",
-    "    lista = result[j]\n",
-    "    j = j + 1\n",
-    "    print(f\"Mese numero {j}\")\n",
-    "    for i in range(len(lista)):\n",
-    "        #user who retweet\n",
-    "        user_name.extend(lista[i][\"retweet_users\"])\n",
-    "        #user retweeted\n",
-    "        rt_user_name.extend(lista[i][\"retweeted_users\"])\n",
-    "stop_time = time.perf_counter()\n",
-    "print(\"Time: \",stop_time-start_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_rt = pd.DataFrame(list(zip(user_name, rt_user_name)), columns =['name', 'rt_name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del user_name\n",
-    "del rt_user_name"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1785,7 +1653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Network Retweet\n",
+    "### Network\n",
     "<a id=\"network\" />"
    ]
   },
@@ -1795,7 +1663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retweets_graph = nx.from_pandas_edgelist(df_rt,'name','rt_name', create_using=nx.DiGraph())\n",
+    "retweets_graph = nx.from_pandas_edgelist(df_rt_ccdh,'name','rt_name', create_using=nx.DiGraph())\n",
     "print(nx.info(retweets_graph))"
    ]
   },
