Edit domain functions

--- a/notebook/Disinform_CCDH.ipynb
+++ b/notebook/Disinform_CCDH.ipynb
@@ -334,21 +334,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_credibility(list_url, df = credibility_url):\n",
-    "    list_credibility = []\n",
-    "    for i in list_url:\n",
-    "        for j in range(len(df[\"Domain\"])):\n",
-    "            if(i == df[\"Domain\"][j]):\n",
-    "                list_credibility.append((i,df[\"Class\"][j]))\n",
-    "    return list_credibility"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1478,7 +1463,7 @@
    },
    "outputs": [],
    "source": [
-    "list_credibility = check_credibility(ccdh_urls)"
+    "list_credibility = check_credibility(ccdh_urls, credibility_url)"
    ]
   },
   {
